--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,14 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Jesús Sánchez Portfolio</title>
+    <style>
+      *{
+        font-family: Roboto, sans-serif;
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
